Update kafka_settings.md